--- a/templates/lista.html
+++ b/templates/lista.html
@@ -22,7 +22,8 @@
                     <td>{{ produto.preco_produto }}</td>
                     <td>
                         <a href="{{ url_for('editar_produto', id = produto.id) }}">Editar</a>
-                        | Excluir
+                        | 
+                         <a href="{{ url_for('excluir_produto', id = produto.id)}}">Excluir</a>
                     </td>
                 </tr>
                 {% endfor %}
